fix error and update swagger
